# decoding

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml  smoke.yml
docs/: PLAN_DECODING.md
src/: bucket.rs  cli.rs  compare.rs  doctor.rs  fixtures.rs  lib.rs  main.rs  normalize.rs  paths.rs  render.rs  report.rs  resolve.rs
src/contracts/: canon_entry.rs  claim.rs  convergence.rs  escalation.rs  mod.rs  policy.rs  vocabulary.rs
tests/: doctor.rs  fixture_loaders.rs  output_snapshots.rs
tests/fixture_support/: mod.rs
tests/fixtures/: README.md
tests/fixtures/claims/: mixed_source.jsonl  refusal_invalid.jsonl
tests/fixtures/expected/archaeology/: mixed_source.canon.jsonl  mixed_source.convergence.json  mixed_source.escalations.jsonl
tests/fixtures/policies/: legacy.decode.v0.json
tests/snapshots/: output_snapshots__canon_entry_v0_mixed_source.snap  output_snapshots__convergence_v0_mixed_source.snap  output_snapshots__escalation_v0_mixed_source.snap
