[package]
name = "decoding"
version = "0.1.0"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "Deterministic convergence engine for legacy-system archaeology"
license = "MIT"
repository = "https://github.com/cmdrvl/decoding"
readme = "README.md"
keywords = ["archaeology", "convergence", "legacy", "claims", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "decoding"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
